# MG24-HAL

./: Cargo.toml  PINS.md  README.md  build.rs  memory.x
.cargo/: config.toml
examples/: blink.rs  button.rs  led_fade.rs
src/: delay.rs  gpio.rs  lib.rs  pins.rs
src/ffi/: cmu.rs  gpio.rs  mod.rs  pwm.rs
src/hal/: mod.rs  pac.rs  pin.rs
src/hal/clocks/: clock.rs
src/hal/gpio/: delay_bare_metal.rs  inputgpio.rs  mod.rs  outputgpio.rs  pindriver.rs
src/hal/pwm/: mod.rs  outputpwm.rs
wrapper/: cmu_wrap.c  cmu_wrap.h  gpio_wrap.c  gpio_wrap.h  system_clock_stubs.c
wrapper/emlib/inc/: em_bitband.h  em_cmu.h  em_gpio.h  em_pwm.h
wrapper/emlib/src/: em_cmu.c  em_gpio.c  em_msc.c  em_pwm.c
