[package]
name = "mg24-hal"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"

[[example]]
name = "blink"
path = "examples/blink.rs"

[[example]]
name = "button"
path = "examples/button.rs"

[build-dependencies]
cc = "1.2.57"
